testing out tag 1.1.8 cloning repos

--- a/.github/workflows/using_test_action.yml
+++ b/.github/workflows/using_test_action.yml
@@ -15,6 +15,6 @@ jobs:
           run-id: "9991543724"
           test-conda-packed-name: "2024-2.1-py310-tiled"
           org: "NSLS-II-CSX"
-          repo: "profile_collections"
+          repo: "profile_collection"
           branch: "master"
           beamline-acronym: "csx"
