--- a/.github/workflows/matrix_json.yml
+++ b/.github/workflows/matrix_json.yml
@@ -22,11 +22,10 @@ jobs:
       - id: set-matrix
 #        run: echo "matrix={\"include\":[{\"repos\":{\"name\":\"csx\",\"org\":\"NSLS-II-CSX\",\"acronym\":csx}},{\"repos\":{\"name\":\"srx\",\"org\":\"NSLS-II-SRX\",\"acronym\":srx}}]}" >> $GITHUB_OUTPUT
         run: |
-          python3 yml_to_string.py
-          env
-          echo "matrix=${{ env.LINK_STR }}"
-          echo "matrix={\"include\":[{\"project\":{\"name\":\"foo\",\"a\":1,\"b\":2}},{\"project\":{\"name\":\"bar\",\"a\":3,\"b\":4}}]}"
-          echo "matrix=${{ env.LINK_STR }}" >> $GITHUB_OUTPUT
+          matrix_str=$(python3 yml_to_string.py)
+          export LINK_STR="$matrix_str"
+          echo "matrix=$LINK_STR"
+          echo "matrix=$LINK_STR" >> $GITHUB_OUTPUT
 
 #          echo "matrix={${LINK_STR}}" >> $GITHUB_OUTPUT
   job2:
